# Flow

./: .gitignore  GEMINI.md  README.md  ink.coda.Flow.json  meson.build
data/: ink.coda.Flow.desktop.in  ink.coda.Flow.gschema.xml  ink.coda.Flow.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: flow-application.c  flow-application.h  flow-window-complete.ui  flow-window-old.c  flow-window-old.ui  flow-window-prev.ui  flow-window-single.c  flow-window-tabs.ui  flow-window.c  flow-window.h  flow-window.ui  flow.gresource.xml  main.c  meson.build
